--- a/src/app/components/parent/parent.component.html
+++ b/src/app/components/parent/parent.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="right">
   <app-children2
-    [(elements)] = arrayElements
+    [(elements)] = "arrayElements"
   ></app-children2>
 </div>
 
